--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is APP</p>
-    <button>submit</button>
+    <p>This is NEW APP</p>
+    <button>submitted</button>
 </body>
 </html>
